--- a/index.html
+++ b/index.html
@@ -1,81 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Galeria de Afiliado</title>
-<script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Galeria de Afiliado</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 font-sans">
 
-<!-- HEADER -->
-<header class="bg-green-600 text-white py-6 text-center shadow-md">
-  <h1 class="text-2xl sm:text-3xl font-bold">Galeria de Mídias do Afiliado</h1>
-  <p class="text-sm sm:text-base mt-1">Compartilhe suas mídias com seu link de promotor</p>
-</header>
+  <!-- HEADER -->
+  <header class="bg-green-600 text-white py-6 text-center shadow-md">
+    <h1 class="text-2xl sm:text-3xl font-bold">Galeria de Mídias do Afiliado</h1>
+    <p class="text-sm sm:text-base mt-1">Compartilhe suas mídias com seu link de promotor</p>
+  </header>
 
-<!-- GALERIA -->
-<section class="container mx-auto px-4 py-8">
-  <div id="mediaGallery" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6"></div>
-</section>
+  <!-- GALERIA -->
+  <section class="container mx-auto px-4 py-8">
+    <div id="mediaGallery" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+      <!-- Mídias serão carregadas aqui -->
+    </div>
+  </section>
 
-<script>
-const mediaGallery = document.getElementById('mediaGallery');
+  <script>
+    const mediaGallery = document.getElementById('mediaGallery');
+    const repoUrl = 'https://api.github.com/repos/lucianodelira/tutorial-banca-brasileira/contents/afiliado';
 
-// URL do arquivo JSON no GitHub
-const jsonURL = "https://raw.githubusercontent.com/SEUUSUARIO/SEU_REPO/main/afiliado/medias.json";
+    fetch(repoUrl)
+      .then(response => response.json())
+      .then(files => {
+        files.forEach(file => {
+          const fileUrl = file.download_url;
+          const fileType = fileUrl.split('.').pop().toLowerCase();
 
-fetch(jsonURL)
-  .then(res => res.json())
-  .then(data => {
-    data.forEach(media => {
-      const mediaCard = document.createElement('div');
-      mediaCard.className = "bg-white p-4 rounded-2xl shadow-lg flex flex-col items-center";
+          if (['jpg', 'jpeg', 'png', 'gif', 'mp4'].includes(fileType)) {
+            const mediaCard = document.createElement('div');
+            mediaCard.className = 'bg-white p-4 rounded-2xl shadow-lg flex flex-col items-center';
 
-      // Verifica se é imagem ou vídeo
-      if(media.type === "image"){
-        const img = document.createElement('img');
-        img.src = media.url;
-        img.alt = "Imagem";
-        img.className = "rounded-lg max-w-full mb-4";
-        mediaCard.appendChild(img);
-      } else if(media.type === "video"){
-        const video = document.createElement('video');
-        video.src = media.url;
-        video.controls = true;
-        video.className = "rounded-lg max-w-full mb-4";
-        mediaCard.appendChild(video);
-      }
+            let mediaElement;
+            if (['jpg', 'jpeg', 'png', 'gif'].includes(fileType)) {
+              mediaElement = document.createElement('img');
+              mediaElement.src = fileUrl;
+              mediaElement.alt = 'Imagem';
+              mediaElement.className = 'rounded-lg max-w-full mb-4';
+            } else if (fileType === 'mp4') {
+              mediaElement = document.createElement('video');
+              mediaElement.src = fileUrl;
+              mediaElement.controls = true;
+              mediaElement.className = 'rounded-lg max-w-full mb-4';
+            }
 
-      // Campo para colocar o link de promotor
-      const inputLink = document.createElement('input');
-      inputLink.type = "text";
-      inputLink.placeholder = "Coloque seu link de promotor aqui";
-      inputLink.className = "border p-2 rounded w-full mb-2";
-      mediaCard.appendChild(inputLink);
+            mediaCard.appendChild(mediaElement);
 
-      // Botão para compartilhar no WhatsApp
-      const shareBtn = document.createElement('button');
-      shareBtn.textContent = "Compartilhar no WhatsApp";
-      shareBtn.className = "bg-green-600 text-white px-4 py-2 rounded shadow hover:bg-green-700 transition w-full";
-      shareBtn.addEventListener('click', () => {
-        const link = inputLink.value.trim();
-        if(!link){
-          alert("Por favor, coloque seu link de promotor!");
-          return;
-        }
-        let shareText = `Confira esta mídia: ${media.url}\nMeu link de promotor: ${link}`;
-        const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(shareText)}`;
-        window.open(whatsappUrl, '_blank');
-      });
-      mediaCard.appendChild(shareBtn);
+            const inputLink = document.createElement('input');
+            inputLink.type = 'text';
+            inputLink.placeholder = 'Coloque seu link de promotor aqui';
+            inputLink.className = 'border p-2 rounded w-full mb-2';
+            mediaCard.appendChild(inputLink);
 
-      // Adiciona card à galeria
-      mediaGallery.appendChild(mediaCard);
-    });
-  })
-  .catch(err => console.error("Erro ao carregar mídias:", err));
-</script>
+            const shareBtn = document.createElement('button');
+            shareBtn.textContent = 'Compartilhar no WhatsApp';
+            shareBtn.className = 'bg-green-600 text-white px-4 py-2 rounded shadow hover:bg-green-700 transition w-full';
+            shareBtn.addEventListener('click', () => {
+              const link = inputLink.value.trim();
+              if (!link) {
+                alert('Por favor, coloque seu link de promotor!');
+                return;
+              }
+              const shareText = `Confira esta mídia: ${fileUrl}\nMeu link de promotor: ${link}`;
+              const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(shareText)}`;
+              window.open(whatsappUrl, '_blank');
+            });
+            mediaCard.appendChild(shareBtn);
+
+            mediaGallery.appendChild(mediaCard);
+          }
+        });
+      })
+      .catch(error => console.error('Erro ao carregar arquivos do GitHub:', error));
+  </script>
 
 </body>
 </html>
