--- a/index.html
+++ b/index.html
@@ -8,89 +8,78 @@
 </head>
 <body class="bg-gray-50 font-sans">
 
-  <!-- HEADER -->
   <header class="bg-green-600 text-white py-6 text-center shadow-md">
     <h1 class="text-2xl sm:text-3xl font-bold">Galeria de Mídias do Afiliado</h1>
     <p class="text-sm sm:text-base mt-1">Compartilhe suas mídias com seu link de promotor</p>
   </header>
 
-  <!-- GALERIA -->
   <section class="container mx-auto px-4 py-8">
-    <div id="mediaGallery" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-      <!-- Mídias serão carregadas aqui -->
-    </div>
+    <div id="mediaGallery" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6"></div>
   </section>
 
   <script>
     const mediaGallery = document.getElementById('mediaGallery');
-    const repoUrl = 'https://api.github.com/repos/lucianodelira/tutorial-banca-brasileira/contents/afiliado';
 
-    fetch(repoUrl)
-      .then(response => response.json())
-      .then(files => {
-        files.forEach(file => {
-          const fileUrl = file.download_url;
-          const fileType = fileUrl.split('.').pop().toLowerCase();
+    // Lista de mídias no repositório
+    const mediaFiles = [
+      "link.png",
+      "video.mp4",
+      "outro.png"
+    ];
+    const mediaBaseUrl = "https://lucianodelira.github.io/tutorial-banca-brasileira/afiliado/";
 
-          if (['jpg', 'jpeg', 'png', 'gif', 'mp4'].includes(fileType)) {
-            const mediaCard = document.createElement('div');
-            mediaCard.className = 'bg-white p-4 rounded-2xl shadow-lg flex flex-col items-center';
+    mediaFiles.forEach(fileName => {
+      const fileUrl = mediaBaseUrl + fileName;
+      const mediaCard = document.createElement('div');
+      mediaCard.className = 'bg-white p-4 rounded-2xl shadow-lg flex flex-col items-center';
 
-            // Elemento de mídia
-            let mediaElement;
-            if (['jpg', 'jpeg', 'png', 'gif'].includes(fileType)) {
-              mediaElement = document.createElement('img');
-              mediaElement.src = fileUrl;
-              mediaElement.alt = 'Imagem';
-              mediaElement.className = 'rounded-lg max-w-full mb-4';
-            } else if (fileType === 'mp4') {
-              mediaElement = document.createElement('video');
-              mediaElement.src = fileUrl;
-              mediaElement.controls = true;
-              mediaElement.className = 'rounded-lg max-w-full mb-4';
-            }
+      let mediaElement;
+      if (fileName.endsWith(".mp4")) {
+        mediaElement = document.createElement('video');
+        mediaElement.src = fileUrl;
+        mediaElement.controls = true;
+        mediaElement.className = 'rounded-lg max-w-full mb-4';
+      } else {
+        mediaElement = document.createElement('img');
+        mediaElement.src = fileUrl;
+        mediaElement.alt = "Imagem";
+        mediaElement.className = 'rounded-lg max-w-full mb-4';
+      }
+      mediaCard.appendChild(mediaElement);
 
-            mediaCard.appendChild(mediaElement);
+      const inputLink = document.createElement('input');
+      inputLink.type = 'text';
+      inputLink.placeholder = 'Coloque seu link de promotor aqui';
+      inputLink.className = 'border p-2 rounded w-full mb-2';
+      mediaCard.appendChild(inputLink);
 
-            // Campo do link de promotor
-            const inputLink = document.createElement('input');
-            inputLink.type = 'text';
-            inputLink.placeholder = 'Coloque seu link de promotor aqui';
-            inputLink.className = 'border p-2 rounded w-full mb-2';
-            mediaCard.appendChild(inputLink);
+      const btnContainer = document.createElement('div');
+      btnContainer.className = "flex gap-2 w-full";
 
-            // Botão de download
-            const downloadBtn = document.createElement('a');
-            downloadBtn.href = fileUrl;
-            downloadBtn.download = file.name;
-            downloadBtn.textContent = 'Baixar Mídia';
-            downloadBtn.className = 'bg-gray-600 text-white px-4 py-2 rounded shadow hover:bg-gray-700 transition w-full mb-2 text-center';
-            mediaCard.appendChild(downloadBtn);
+      const shareBtn = document.createElement('button');
+      shareBtn.textContent = "Compartilhar no WhatsApp";
+      shareBtn.className = 'bg-green-600 text-white px-4 py-2 rounded shadow hover:bg-green-700 transition flex-1';
+      shareBtn.addEventListener('click', () => {
+        const link = encodeURIComponent(inputLink.value.trim());
+        if (!link) { alert('Coloque seu link de promotor!'); return; }
 
-            // Botão compartilhar WhatsApp
-            const shareBtn = document.createElement('button');
-            shareBtn.textContent = 'Compartilhar no WhatsApp';
-            shareBtn.className = 'bg-green-600 text-white px-4 py-2 rounded shadow hover:bg-green-700 transition w-full';
-            shareBtn.addEventListener('click', () => {
-              const link = inputLink.value.trim();
-              if (!link) {
-                alert('Por favor, coloque seu link de promotor!');
-                return;
-              }
-              // Texto amigável mostrando só o nome do arquivo, mas WhatsApp precisa da URL real para preview
-              const displayName = file.name;
-              const whatsappText = `Confira esta mídia: ${displayName}\nMeu link de promotor: ${link}`;
-              const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(whatsappText)}&source=&data=`;
-              // Abrindo WhatsApp Web ou App
-              window.open(`https://wa.me/?text=${encodeURIComponent(`Confira esta mídia: ${fileUrl}\nMeu link de promotor: ${link}`)}`, '_blank');
-            });
-            mediaCard.appendChild(shareBtn);
+        // Página de preview que gera meta tags Open Graph
+        const previewPage = `${window.location.origin}/preview.html?file=${fileName}&link=${link}`;
+        const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(previewPage)}`;
+        window.open(whatsappUrl, '_blank');
+      });
 
-            mediaGallery.appendChild(mediaCard);
-          }
-        });
-      })
-      .catch(error => console.error('Erro ao carregar arquivos do GitHub:', error));
+      const downloadBtn = document.createElement('a');
+      downloadBtn.textContent = "Baixar";
+      downloadBtn.href = fileUrl;
+      downloadBtn.download = fileName;
+      downloadBtn.className = 'bg-gray-600 text-white px-4 py-2 rounded shadow hover:bg-gray-700 transition flex-1 text-center';
+      btnContainer.appendChild(shareBtn);
+      btnContainer.appendChild(downloadBtn);
+
+      mediaCard.appendChild(btnContainer);
+      mediaGallery.appendChild(mediaCard);
+    });
   </script>
 
 </body>
