--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body class="bg-gray-50 font-sans">
 
+  <!-- HEADER -->
   <header class="bg-green-600 text-white py-6 text-center shadow-md">
     <h1 class="text-2xl sm:text-3xl font-bold">Galeria de Mídias do Afiliado</h1>
     <p class="text-sm sm:text-base mt-1">Compartilhe suas mídias com seu link de promotor</p>
   </header>
 
+  <!-- GALERIA -->
   <section class="container mx-auto px-4 py-8">
     <div id="mediaGallery" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6"></div>
   </section>
@@ -20,13 +22,12 @@
   <script>
     const mediaGallery = document.getElementById('mediaGallery');
 
-    // Lista de mídias no repositório
+    // Lista de mídias (adicione todas as suas mídias aqui)
     const mediaFiles = [
       "link.png",
-      "video.mp4",
-      "outro.png"
+      "video.mp4"
     ];
-    const mediaBaseUrl = "https://lucianodelira.github.io/tutorial-banca-brasileira/afiliado/";
+    const mediaBaseUrl = "./afiliado/";
 
     mediaFiles.forEach(fileName => {
       const fileUrl = mediaBaseUrl + fileName;
@@ -63,7 +64,7 @@
         const link = encodeURIComponent(inputLink.value.trim());
         if (!link) { alert('Coloque seu link de promotor!'); return; }
 
-        // Página de preview que gera meta tags Open Graph
+        // Página de preview
         const previewPage = `${window.location.origin}/preview.html?file=${fileName}&link=${link}`;
         const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(previewPage)}`;
         window.open(whatsappUrl, '_blank');
@@ -74,10 +75,11 @@
       downloadBtn.href = fileUrl;
       downloadBtn.download = fileName;
       downloadBtn.className = 'bg-gray-600 text-white px-4 py-2 rounded shadow hover:bg-gray-700 transition flex-1 text-center';
+
       btnContainer.appendChild(shareBtn);
       btnContainer.appendChild(downloadBtn);
-
       mediaCard.appendChild(btnContainer);
+
       mediaGallery.appendChild(mediaCard);
     });
   </script>
