--- a/index.html
+++ b/index.html
@@ -2,87 +2,32 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galeria de Afiliado</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Afiliado - Banca App</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; padding: 40px; }
+    button { padding: 12px 20px; margin: 10px; font-size: 16px; cursor: pointer; }
+    input { padding: 10px; width: 300px; }
+  </style>
 </head>
-<body class="bg-gray-50 font-sans">
+<body>
+  <h1>👤 Banca App — Afiliado</h1>
+  <p>Insira seu link de promotor:</p>
+  <input type="text" id="promotorLink" placeholder="https://app.bancabrasileira.com.br/pr/XXXXXX">
+  <br><br>
+  <button onclick="gerarLink()">Gerar link de compartilhamento</button>
 
-  <!-- HEADER -->
-  <header class="bg-green-600 text-white py-6 text-center shadow-md">
-    <h1 class="text-2xl sm:text-3xl font-bold">Galeria de Mídias do Afiliado</h1>
-    <p class="text-sm sm:text-base mt-1">Compartilhe suas mídias com seu link de promotor</p>
-  </header>
-
-  <!-- GALERIA -->
-  <section class="container mx-auto px-4 py-8">
-    <div id="mediaGallery" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6"></div>
-  </section>
+  <p id="saida"></p>
 
   <script>
-    const mediaGallery = document.getElementById('mediaGallery');
-
-    // Lista de mídias (adicione todas as suas mídias aqui)
-    const mediaFiles = [
-      "link.png",
-      "video.mp4"
-    ];
-    const mediaBaseUrl = "./afiliado/";
-
-    mediaFiles.forEach(fileName => {
-      const fileUrl = mediaBaseUrl + fileName;
-      const mediaCard = document.createElement('div');
-      mediaCard.className = 'bg-white p-4 rounded-2xl shadow-lg flex flex-col items-center';
-
-      let mediaElement;
-      if (fileName.endsWith(".mp4")) {
-        mediaElement = document.createElement('video');
-        mediaElement.src = fileUrl;
-        mediaElement.controls = true;
-        mediaElement.className = 'rounded-lg max-w-full mb-4';
-      } else {
-        mediaElement = document.createElement('img');
-        mediaElement.src = fileUrl;
-        mediaElement.alt = "Imagem";
-        mediaElement.className = 'rounded-lg max-w-full mb-4';
-      }
-      mediaCard.appendChild(mediaElement);
-
-      const inputLink = document.createElement('input');
-      inputLink.type = 'text';
-      inputLink.placeholder = 'Coloque seu link de promotor aqui';
-      inputLink.className = 'border p-2 rounded w-full mb-2';
-      mediaCard.appendChild(inputLink);
-
-      const btnContainer = document.createElement('div');
-      btnContainer.className = "flex gap-2 w-full";
-
-      const shareBtn = document.createElement('button');
-      shareBtn.textContent = "Compartilhar no WhatsApp";
-      shareBtn.className = 'bg-green-600 text-white px-4 py-2 rounded shadow hover:bg-green-700 transition flex-1';
-      shareBtn.addEventListener('click', () => {
-        const link = encodeURIComponent(inputLink.value.trim());
-        if (!link) { alert('Coloque seu link de promotor!'); return; }
-
-        // Página de preview
-        const previewPage = `${window.location.origin}/preview.html?file=${fileName}&link=${link}`;
-        const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(previewPage)}`;
-        window.open(whatsappUrl, '_blank');
-      });
-
-      const downloadBtn = document.createElement('a');
-      downloadBtn.textContent = "Baixar";
-      downloadBtn.href = fileUrl;
-      downloadBtn.download = fileName;
-      downloadBtn.className = 'bg-gray-600 text-white px-4 py-2 rounded shadow hover:bg-gray-700 transition flex-1 text-center';
-
-      btnContainer.appendChild(shareBtn);
-      btnContainer.appendChild(downloadBtn);
-      mediaCard.appendChild(btnContainer);
-
-      mediaGallery.appendChild(mediaCard);
-    });
+    function gerarLink() {
+      const link = encodeURIComponent(document.getElementById("promotorLink").value.trim());
+      const file = "link.png"; // imagem padrão
+      const final = `https://tutorial.bancabrasileira.net/afiliado/share.html?file=${file}&link=${link}`;
+      document.getElementById("saida").innerHTML = `
+        <p>✅ Link gerado:</p>
+        <a href="${final}" target="_blank">${final}</a>
+      `;
+    }
   </script>
-
 </body>
 </html>
