--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     const mediaGallery = document.getElementById('mediaGallery');
 
     // Configurações do GitHub
-    const GITHUB_USER = 'SEU_USUARIO';
-    const GITHUB_REPO = 'SEU_REPOSITORIO';
+    const GITHUB_USER = 'lucianodelira';
+    const GITHUB_REPO = 'tutorial-banca-brasileira';
     const GITHUB_FOLDER = 'afiliado';
 
     // Busca arquivos da pasta afiliado via GitHub API
@@ -94,3 +94,4 @@
   </script>
 </body>
 </html>
+
