--- a/preview.html
+++ b/preview.html
@@ -3,28 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Confira esta mídia!">
-  <meta property="og:description" content="Compartilhe esta mídia com seu link de promotor.">
-  
-  <!-- Substitua NOME_DA_IMAGEM.jpg pela mídia que deseja compartilhar -->
-  <meta property="og:image" content="https://lucianodelira.github.io/tutorial-banca-brasileira/afiliado/NOME_DA_IMAGEM.jpg">
-  
+  <meta property="og:title" content="Galeria de Mídias do Afiliado">
+  <meta property="og:description" content="Compartilhe suas mídias com seu link de promotor.">
+
+  <!-- Substitua NOME_DA_IMAGEM.jpg pelo arquivo correto -->
+  <meta property="og:image" content="https://tutorial.bancabrasileira.net/afiliado/NOME_DA_IMAGEM.jpg">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Preview da Mídia</title>
 
   <style>
-    body { text-align:center; padding:50px; font-family:sans-serif; }
-    img, video { max-width:90%; margin-top:20px; border-radius:12px; }
+    body { 
+      text-align: center; 
+      padding: 40px; 
+      font-family: Arial, sans-serif; 
+      background: #f9f9f9;
+    }
+    h1 { color: #333; }
+    img, video { 
+      max-width: 95%; 
+      margin-top: 20px; 
+      border-radius: 12px; 
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
   </style>
 </head>
 <body>
-  <h1>Confira esta mídia!</h1>
-  
-  <!-- Substitua NOME_DA_IMAGEM.jpg pela mídia que deseja mostrar -->
-  <img src="https://lucianodelira.github.io/tutorial-banca-brasileira/afiliado/NOME_DA_IMAGEM.jpg" alt="Mídia">
+  <h1>Galeria de Mídias do Afiliado</h1>
+  <p>Compartilhe suas mídias com seu link de promotor</p>
 
-  <!-- Se for vídeo, use assim:
-  <video src="https://lucianodelira.github.io/tutorial-banca-brasileira/afiliado/NOME_DO_VIDEO.mp4" controls></video>
+  <!-- Para imagem -->
+  <img src="https://tutorial.bancabrasileira.net/afiliado/NOME_DA_IMAGEM.jpg" alt="Mídia Afiliado">
+
+  <!-- Para vídeo, substitua assim:
+  <video controls>
+    <source src="https://tutorial.bancabrasileira.net/afiliado/NOME_DO_VIDEO.mp4" type="video/mp4">
+    Seu navegador não suporta vídeo.
+  </video>
   -->
 </body>
 </html>
