--- a/index.html
+++ b/index.html
@@ -1,92 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galeria de Afiliado</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-50 font-sans">
-
-  <header class="bg-green-600 text-white py-6 text-center shadow-md">
-    <h1 class="text-2xl sm:text-3xl font-bold">Galeria de Mídias do Afiliado</h1>
-    <p class="text-sm sm:text-base mt-1">Compartilhe suas mídias com seu link de promotor</p>
-  </header>
-
-  <section class="container mx-auto px-4 py-8">
-    <div id="mediaGallery" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6"></div>
-  </section>
-
-  <script>
-    const mediaGallery = document.getElementById('mediaGallery');
-
-    // Lista de arquivos adicionados na pasta afiliado
-    const mediaFiles = [
-      "link.png",
-      "video.mp4"
-      // Adicione mais arquivos aqui
-    ];
-
-    // URL pública do seu site
-    const mediaBaseUrl = "https://tutorial.bancabrasileira.net/afiliado/";
-
-    mediaFiles.forEach(fileName => {
-      const fileUrl = mediaBaseUrl + fileName;
-
-      const mediaCard = document.createElement('div');
-      mediaCard.className = 'bg-white p-4 rounded-2xl shadow-lg flex flex-col items-center';
-
-      let mediaElement;
-      if (fileName.endsWith(".mp4")) {
-        mediaElement = document.createElement('video');
-        mediaElement.src = fileUrl;
-        mediaElement.controls = true;
-        mediaElement.className = 'rounded-lg max-w-full mb-4';
-      } else {
-        mediaElement = document.createElement('img');
-        mediaElement.src = fileUrl;
-        mediaElement.alt = "Imagem";
-        mediaElement.className = 'rounded-lg max-w-full mb-4';
-      }
-      mediaCard.appendChild(mediaElement);
-
-      const inputLink = document.createElement('input');
-      inputLink.type = 'text';
-      inputLink.placeholder = 'Coloque seu link de promotor aqui';
-      inputLink.className = 'border p-2 rounded w-full mb-2';
-      mediaCard.appendChild(inputLink);
-
-      const btnContainer = document.createElement('div');
-      btnContainer.className = "flex gap-2 w-full";
-
-      // Botão compartilhar no WhatsApp
-      const shareBtn = document.createElement('button');
-      shareBtn.textContent = "Compartilhar no WhatsApp";
-      shareBtn.className = 'bg-green-600 text-white px-4 py-2 rounded shadow hover:bg-green-700 transition flex-1';
-      shareBtn.addEventListener('click', () => {
-        const link = inputLink.value.trim();
-        if (!link) { alert('Coloque seu link de promotor!'); return; }
-
-        // Link público do seu site, compatível com WhatsApp
-        const message = `Confira esta mídia: ${fileUrl}\n\nMeu link de promotor: ${link}`;
-        const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(message)}`;
-        window.open(whatsappUrl, '_blank');
-      });
-
-      // Botão download
-      const downloadBtn = document.createElement('a');
-      downloadBtn.textContent = "Baixar";
-      downloadBtn.href = fileUrl;
-      downloadBtn.download = fileName;
-      downloadBtn.className = 'bg-gray-600 text-white px-4 py-2 rounded shadow hover:bg-gray-700 transition flex-1 text-center';
-
-      btnContainer.appendChild(shareBtn);
-      btnContainer.appendChild(downloadBtn);
-      mediaCard.appendChild(btnContainer);
-
-      mediaGallery.appendChild(mediaCard);
-    });
-  </script>
-
-</body>
-</html>
+<!DOCTYPE html> <html lang="pt-BR"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Galeria de Afiliado</title> <script src="https://cdn.tailwindcss.com"></script> </head> <body class="bg-gray-50 font-sans"> <header class="bg-green-600 text-white py-6 text-center shadow-md"> <h1 class="text-2xl sm:text-3xl font-bold">Galeria de Mídias do Afiliado</h1> <p class="text-sm sm:text-base mt-1">Compartilhe suas mídias com seu link de promotor</p> </header> <section class="container mx-auto px-4 py-8"> <div id="mediaGallery" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6"></div> </section> <script> const mediaGallery = document.getElementById('mediaGallery'); // Configurações do GitHub const GITHUB_USER = 'lucianodelira'; const GITHUB_REPO = 'tutorial-banca-brasileira'; const GITHUB_FOLDER = 'afiliado'; // Busca arquivos da pasta afiliado via GitHub API fetch(https://api.github.com/repos/${GITHUB_USER}/${GITHUB_REPO}/contents/${GITHUB_FOLDER}) .then(res => res.json()) .then(files => { files.forEach(file => { const fileName = file.name; const fileUrl = file.download_url; const mediaCard = document.createElement('div'); mediaCard.className = 'bg-white p-4 rounded-2xl shadow-lg flex flex-col items-center'; let mediaElement; if (fileName.endsWith(".mp4")) { mediaElement = document.createElement('video'); mediaElement.src = fileUrl; mediaElement.controls = true; mediaElement.className = 'rounded-lg max-w-full mb-4'; } else { mediaElement = document.createElement('img'); mediaElement.src = fileUrl; mediaElement.alt = "Imagem"; mediaElement.className = 'rounded-lg max-w-full mb-4'; } mediaCard.appendChild(mediaElement); const inputLink = document.createElement('input'); inputLink.type = 'text'; inputLink.placeholder = 'Coloque seu link de promotor aqui'; inputLink.className = 'border p-2 rounded w-full mb-2'; mediaCard.appendChild(inputLink); const btnContainer = document.createElement('div'); btnContainer.className = "flex gap-2 w-full"; // Botão compartilhar const shareBtn = document.createElement('button'); shareBtn.textContent = "Compartilhar no WhatsApp"; shareBtn.className = 'bg-green-600 text-white px-4 py-2 rounded shadow hover:bg-green-700 transition flex-1'; shareBtn.addEventListener('click', () => { const link = inputLink.value.trim(); if (!link) { alert('Coloque seu link de promotor!'); return; } // Link direto da mídia para WhatsApp const message = Confira esta mídia: ${fileUrl}\n\nMeu link de promotor: ${link}; const whatsappUrl = https://wa.me/?text=${encodeURIComponent(message)}; window.open(whatsappUrl, '_blank'); }); // Botão download const downloadBtn = document.createElement('a'); downloadBtn.textContent = "Baixar"; downloadBtn.href = fileUrl; downloadBtn.download = fileName; downloadBtn.className = 'bg-gray-600 text-white px-4 py-2 rounded shadow hover:bg-gray-700 transition flex-1 text-center'; btnContainer.appendChild(shareBtn); btnContainer.appendChild(downloadBtn); mediaCard.appendChild(btnContainer); mediaGallery.appendChild(mediaCard); }); }) .catch(err => { mediaGallery.innerHTML = "<p>Erro ao carregar mídias.</p>"; console.error(err); }); </script> </body> </html>
