--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
   <script>
     const mediaGallery = document.getElementById('mediaGallery');
 
-    // Configurações do GitHub
+    // Configurações do GitHub (usadas apenas para listar os arquivos)
     const GITHUB_USER = 'lucianodelira';
     const GITHUB_REPO = 'tutorial-banca-brasileira';
     const GITHUB_FOLDER = 'afiliado';
+
+    // URL pública do seu site
+    const PUBLIC_BASE_URL = 'https://tutorial.bancabrasileira.net/afiliado/';
 
     // Busca arquivos da pasta afiliado via GitHub API
     fetch(`https://api.github.com/repos/${GITHUB_USER}/${GITHUB_REPO}/contents/${GITHUB_FOLDER}`)
@@ -31,7 +34,7 @@
       .then(files => {
         files.forEach(file => {
           const fileName = file.name;
-          const fileUrl = file.download_url;
+          const publicFileUrl = `${PUBLIC_BASE_URL}${fileName}`; // Usando domínio público
 
           const mediaCard = document.createElement('div');
           mediaCard.className = 'bg-white p-4 rounded-2xl shadow-lg flex flex-col items-center';
@@ -39,12 +42,12 @@
           let mediaElement;
           if (fileName.endsWith(".mp4")) {
             mediaElement = document.createElement('video');
-            mediaElement.src = fileUrl;
+            mediaElement.src = publicFileUrl; // Exibe vídeo pelo domínio público
             mediaElement.controls = true;
             mediaElement.className = 'rounded-lg max-w-full mb-4';
           } else {
             mediaElement = document.createElement('img');
-            mediaElement.src = fileUrl;
+            mediaElement.src = publicFileUrl; // Exibe imagem pelo domínio público
             mediaElement.alt = "Imagem";
             mediaElement.className = 'rounded-lg max-w-full mb-4';
           }
@@ -59,7 +62,7 @@
           const btnContainer = document.createElement('div');
           btnContainer.className = "flex gap-2 w-full";
 
-          // Botão compartilhar
+          // Botão compartilhar no WhatsApp
           const shareBtn = document.createElement('button');
           shareBtn.textContent = "Compartilhar no WhatsApp";
           shareBtn.className = 'bg-green-600 text-white px-4 py-2 rounded shadow hover:bg-green-700 transition flex-1';
@@ -67,8 +70,7 @@
             const link = inputLink.value.trim();
             if (!link) { alert('Coloque seu link de promotor!'); return; }
 
-            // Link direto da mídia para WhatsApp
-            const message = `Confira esta mídia: ${fileUrl}\n\nMeu link de promotor: ${link}`;
+            const message = `Confira esta mídia: ${publicFileUrl}\n\nMeu link de promotor: ${link}`;
             const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(message)}`;
             window.open(whatsappUrl, '_blank');
           });
@@ -76,7 +78,7 @@
           // Botão download
           const downloadBtn = document.createElement('a');
           downloadBtn.textContent = "Baixar";
-          downloadBtn.href = fileUrl;
+          downloadBtn.href = publicFileUrl;
           downloadBtn.download = fileName;
           downloadBtn.className = 'bg-gray-600 text-white px-4 py-2 rounded shadow hover:bg-gray-700 transition flex-1 text-center';
 
