--- a/preview.html
+++ b/preview.html
@@ -2,44 +2,51 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Galeria de Mídias do Afiliado">
-  <meta property="og:description" content="Compartilhe suas mídias com seu link de promotor.">
-
-  <!-- Substitua NOME_DA_IMAGEM.jpg pelo arquivo correto -->
-  <meta property="og:image" content="https://tutorial.bancabrasileira.net/afiliado/NOME_DA_IMAGEM.jpg">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Preview da Mídia</title>
 
+  <!-- Meta tags Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Confira esta mídia!">
+  <meta property="og:description" content="Compartilhe esta mídia com seu link de promotor.">
+  <meta property="og:image" content="">
+
   <style>
-    body { 
-      text-align: center; 
-      padding: 40px; 
-      font-family: Arial, sans-serif; 
-      background: #f9f9f9;
-    }
-    h1 { color: #333; }
-    img, video { 
-      max-width: 95%; 
-      margin-top: 20px; 
-      border-radius: 12px; 
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
+    body { text-align:center; padding:50px; font-family:sans-serif; }
+    img, video { max-width:90%; margin-top:20px; border-radius:12px; }
   </style>
 </head>
 <body>
-  <h1>Galeria de Mídias do Afiliado</h1>
-  <p>Compartilhe suas mídias com seu link de promotor</p>
+  <h1>Confira esta mídia!</h1>
+  <div id="mediaContainer"></div>
 
-  <!-- Para imagem -->
-  <img src="https://tutorial.bancabrasileira.net/afiliado/NOME_DA_IMAGEM.jpg" alt="Mídia Afiliado">
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const file = urlParams.get('file');
+    if (!file) {
+      document.body.innerHTML = "<p>Arquivo não encontrado.</p>";
+      throw new Error("Arquivo não encontrado");
+    }
 
-  <!-- Para vídeo, substitua assim:
-  <video controls>
-    <source src="https://tutorial.bancabrasileira.net/afiliado/NOME_DO_VIDEO.mp4" type="video/mp4">
-    Seu navegador não suporta vídeo.
-  </video>
-  -->
+    // URL pública do seu site
+    const mediaUrl = `https://tutorial.bancabrasileira.net/afiliado/${file}`;
+
+    // ATENÇÃO: Meta tags precisam estar no HTML inicial para WhatsApp
+    // Então a linha abaixo funciona só para atualização de visualização no navegador, mas o WhatsApp vai ler cache do servidor
+    document.querySelector('meta[property="og:image"]').setAttribute('content', mediaUrl);
+
+    const container = document.getElementById('mediaContainer');
+
+    if (file.endsWith(".mp4")) {
+      const video = document.createElement('video');
+      video.src = mediaUrl;
+      video.controls = true;
+      container.appendChild(video);
+    } else {
+      const img = document.createElement('img');
+      img.src = mediaUrl;
+      container.appendChild(img);
+    }
+  </script>
 </body>
 </html>
